# betadvisor-ai

./: README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs  prompts.rs  web_search.rs
frontend/: package.json
frontend/app/: page.tsx
frontend/app/components/: PreferencesPanel.tsx  ResponseDisplay.tsx
