[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8"}
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.34.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
